Small fixes to sidenav scrolling
We need to set our max-height to screen height - 69 to account for the space of the nav and padding.

We use `overflow-y: auto` to only set vertical scrollbar and it should not be visible when it is not needed.

--- a/application/themes/safer/css/sidenav.less
+++ b/application/themes/safer/css/sidenav.less
@@ -68,12 +68,11 @@
     .bs-sidebar.affix,
     .bs-sidebar.affix-bottom {
       width: 213px;
-      overflow: scroll; // max-height is set by javascript.
+      overflow-y: auto; // max-height is set by javascript.
     }
     .bs-sidebar.affix {
       position: fixed; /* Undo the static from mobile first approach */
       top: 70px;
-      padding-bottom: 40px;
     }
     .bs-sidebar.affix-bottom {
       position: absolute; /* Undo the static from mobile first approach */
